@@ -1,4 +1,10 @@
 
+2020-06-18  Edward Hart <edward.dan.hart@gmail.com>
+
+	* codegen.c (output_local_fields): fixed bug #648, where variable length
+	  parameters' were not cached when the unrelated local_field_cache was
+	  empty.
+
 2020-06-06  Ron Norman <rjn@inglenet.com>
 	* codegen.c: Changes to module entry to better handle
 			C mod calls COBOL mod calls C mod calls COBOL mod
